# symath

./: .gitignore  CMakeLists.txt  LICENSE  README.md  func_tree.cpp  func_tree.hpp  func_tree_cpy.cpp  func_tree_dif.cpp  func_tree_get.cpp  func_tree_red.cpp  func_tree_str.cpp  long.cpp  long.hpp  long_frac.hpp  test.cpp
inc/symath/: func_tree.hpp  long.hpp  tree.hpp
src/: test.cpp
src/symath/: func_tree.cpp  func_tree_cpy.cpp  func_tree_dif.cpp  func_tree_get.cpp  func_tree_red.cpp  func_tree_str.cpp  long.cpp  tree.cpp  tree_cpy.cpp  tree_dif.cpp  tree_get.cpp  tree_node_cpy.cpp  tree_node_dif.cpp  tree_node_get.cpp  tree_node_red.cpp  tree_node_str.cpp  tree_red.cpp  tree_str.cpp
